--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container d-flex justify-content-center">
   <div class="card card-img">
-    <img src="/images/image-qr-code.png" class="img-card">
+    <img src="https://github.com/BotInterpreters/frontendmentor-challenges-qr-code/blob/master/images/image-qr-code.png" class="img-card">
     <div class="card-body p-0">
       <h1 class="card-title">Improve your front-end skills by building projects</h1>
         <p class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
